# barmuda

./: .env.example  .env.production  .env.vercel  .gitignore  .pre-commit-config.yaml  .vercel_test  .vercelignore  BILLING_INTEGRATION.md  CHIP_SYSTEM_TEST_RESULTS.md  ChatbotPromptRefinement.md  Claude.md  DEPLOYMENT_GUIDE.md  DesignLinks.md  EdgeCases.md  FORCE_DEPLOY.txt  GROQ_INTEGRATION_SUMMARY.md  GROQ_SETUP.md  MIGRATION_PLAN.md  Makefile  PAYMENT_PRODUCTION_SETUP.md  README_MODULE1.md  README_MODULE2.md  REBRAND_NOTES.md  UPDATE_PLATFORMS.md  VERCEL_ENV_SETUP.md  VOICE_MODE_REQUIREMENTS.md  admin.py  analyze_current_system.py  app.py  app.py.bak  app.py.bak2  app.py.bak3  background_extraction.py  barmuda-interactive-demo.html  billing.py  changes.md  chat_agent.py  chat_agent_v2.py  chat_agent_v3.py  chat_engine.py  (+93 more)
.github/workflows/: test.yml
agent/: .gitignore  Dockerfile  agent.py  docker-compose.yml  env.example  langgraph.json  main.py  redis.conf  requirements.txt  service.py  start.sh
agent/core/: database.py  redis_client.py
agent/data/: form_2.json
archive_temp_disabled/: chat_agent_v2.py
data/: ab_test_data.json  refactor.md
scripts/: run_tests.sh
static/: .htaccess  llms.txt  manifest.json  performance.js  robots.txt  sitemap.xml  sw.js  widget.js
templates/: admin_dashboard.html  admin_login.html  base.html  billing.html  chat.html  create_form.html  dashboard.html  edit_form.html  embed.html  error.html  financial-consultants.html  form_placeholder.html  guides.html  index.html  index_a.html  index_b.html  index_backup.html  index_working_aug7.html  market-research.html  pricing.html  privacy.html  responses.html  terms.html  therapists-backup.html  therapists.html  voice.html  why.html
tests/: conftest.py  test_inference_standalone.py  test_real_functionality.py  test_ui_functionality.py  test_voice_mode.py
web/: __init__.py  config.py  extensions.py
(+78 files in other folders)
